# crEngine

./: .gitignore
base/script/: game_main.script  se2_events.script
neo/: CMakeLists.txt  CMakeLists.txt.bank
neo/d3xp/: AFEntity.cpp  CMakeLists.txt  Entity.h  Game.h  Game_local.cpp  Game_local.h  Game_network.cpp  Item.cpp  Player.cpp  PlayerView.cpp
neo/d3xp/menus/: MenuHandler.cpp  MenuScreen_HUD.cpp  MenuScreen_Shell_Credits.cpp  MenuScreen_Shell_Leaderboards.cpp  MenuScreen_Shell_Resolution.cpp  MenuScreen_Shell_Save.cpp  MenuScreen_Shell_SystemOptions.cpp  MenuWidget.h
neo/framework/: CMakeLists.txt  Common.cpp  Common.h  Common_demos.cpp  Common_dialog.cpp  Common_load.cpp  Common_local.h  Common_menu.cpp  Common_printf.cpp  Console.cpp  DeclManager.h  EditField.cpp  File.cpp  File.h  FileSystem.cpp  File_Resource.cpp  File_Resource.h  File_SaveGame.cpp  File_SaveGame.h  KeyInput.cpp  Licensee.h  PlayerProfile.cpp  PlayerProfile.h  Serializer.h  TokenParser.h  Unzip.h  UsercmdGen.h  Zip.h  common_frame.cpp
neo/framework/cm/: CollisionModel.h  CollisionModel_load.cpp  CollisionModel_local.h
neo/framework/ui/: DeviceContext.cpp  GameBustOutWindow.cpp  MarkerWindow.cpp  RenderWindow.cpp  SimpleWindow.cpp  Window.cpp
neo/idlib/: BitMsg.cpp  BitMsg.h  CMakeLists.txt  Heap.cpp  Heap.h  LangDict.cpp  LangDict.h  Lib.cpp  Lib.h  MapFile.cpp  MapFile.h  ParallelJobList.cpp  ParallelJobList.h  SoftwareCache.cpp  SoftwareCache.h  StaticPointer.h  Str.cpp  Str.h  Swap.h  precompiled.h
neo/idlib/containers/: List.h  Sort.h  StrList.h
neo/idlib/geometry/: DrawVert.h  RenderMatrix.cpp
neo/idlib/math/: Lcp.cpp  Simd.cpp  Simd.h  Simd_Generic.cpp  Simd_Generic.h
neo/idlib/sys/: sys_alloc_tags.h  sys_defines.h  sys_includes.h  sys_platform.h  sys_thread.cpp  sys_types.h
neo/libs/: CMakeLists.txt
neo/renderer/: AutoRender.cpp  BoundsTrack.cpp  BufferObject.cpp  CMakeLists.txt  Cinematic.cpp  Font.cpp  Font.h  GLState.h  GraphicsAPIWrapper.h  Material.h  RenderContext.cpp  RenderContext.h  RenderLog.cpp  RenderLog.h  RenderSystem.cpp  RenderSystem.h  RenderSystem_init.cpp  VertexCache.cpp  VertexCache.h  tr_local.h  tr_trace.cpp  tr_trisurf.cpp
neo/renderer/DXT/: DXTEncoder.cpp  DXTEncoder_SSE2.cpp
neo/renderer/OpenGL/: OpenGL.cpp  OpenGL.h  gl_Framebuffer.cpp  gl_GraphicsAPIWrapper.cpp  gl_Image.cpp  gl_backend.cpp
neo/renderer/backend/: RenderProgs.cpp  RenderProgs_GLSL.cpp  tr_backend_draw.cpp  tr_backend_rendertools.cpp
neo/renderer/frontend/: tr_frontend_addmodels.cpp  tr_frontend_deform.cpp  tr_frontend_guisurf.cpp  tr_frontend_main.cpp  tr_frontend_subview.cpp
neo/renderer/images/: ImageManager.cpp  ImageOpts.h  Image_files.cpp  Image_load.cpp  jpeg_memory_src.cpp  jpeg_memory_src.h
neo/renderer/models/: GuiModel.cpp  GuiModel.h  Model.cpp  Model.h  Model_lwo.cpp
neo/renderer/renderworld/: RenderWorld_demo.cpp  RenderWorld_load.cpp  RenderWorld_local.h  RenderWorld_portals.cpp
neo/sound/: CMakeLists.txt  SoundVoice.h  WaveFile.cpp  WaveFile.h  snd_emitter.cpp  snd_local.h  snd_shader.cpp  snd_system.cpp  snd_world.cpp  sound.h
neo/sound/OpenAL/: AL_SoundHardware.cpp  AL_SoundHardware.h  AL_SoundSample.cpp  AL_SoundSample.h  AL_SoundVoice.cpp  AL_SoundVoice.h
neo/sound/SDL/: SDLSoundHardware.cpp  SDLSoundHardware.h  SDLSoundSample.cpp  SDLSoundSample.h  SDLSoundVoice.cpp  SDLSoundVoice.h
neo/sound/XAudio2/: XA2_SoundHardware.cpp  XA2_SoundSample.cpp  XA2_SoundSample.h  XA2_SoundVoice.cpp  XA2_SoundVoice.h
neo/sound/stub/: SoundSample.cpp  SoundStub.h
neo/swf/: CMakeLists.txt  SWF.h  SWF_Bitstream.cpp  SWF_Bitstream.h  SWF_Events.cpp  SWF_Image.cpp  SWF_Load.cpp  SWF_Main.cpp  SWF_ParmList.cpp  SWF_ParmList.h  SWF_PlaceObject.cpp  SWF_Render.cpp  SWF_ScriptFunction.cpp  SWF_ScriptFunction.h  SWF_ScriptVar.cpp  SWF_ScriptVar.h  SWF_ShapeParser.cpp  SWF_ShapeParser.h  SWF_Shapes.cpp  SWF_SpriteInstance.cpp  SWF_SpriteInstance.h  SWF_Sprites.cpp  SWF_Sprites.h  SWF_Text.cpp  SWF_TextInstance.cpp  SWF_Types.h  SWF_Zlib.cpp
neo/sys/: CMakeLists.txt  LightweightCompression.cpp  LightweightCompression.h  PacketProcessor.cpp  PacketProcessor.h  Snapshot.cpp  Snapshot.h  SnapshotProcessor.cpp  SnapshotProcessor.h  Snapshot_Jobs.cpp  Snapshot_Jobs.h  sys_achievements.h  sys_cpu.cpp  sys_leaderboards.h  sys_lobby.cpp  sys_lobby.h  sys_lobby_backend.h  sys_lobby_snapshot.cpp  sys_local.cpp  sys_local.h  sys_localuser.cpp  sys_localuser.h  sys_main.cpp  sys_paths.cpp  sys_public.h  sys_savegame.cpp  sys_savegame.h  sys_session.h  sys_session_local.cpp  sys_session_local.h  sys_session_savegames.cpp  sys_signin.cpp  sys_stats.h  sys_stats_misc.h  sys_video.cpp  sys_video.h  sys_voicechat.h
neo/sys/common/: cpu.cpp  events.cpp  joystick.cpp  joystick.h  localuser.h  memcheck.cpp  process.cpp  savegame.cpp  session_local.cpp  signin.cpp  socket_net.cpp  video.cpp
neo/sys/linux/: linux_main.cpp
neo/sys/posix/: posix_console.cpp  posix_local.cpp  posix_public.h  posix_signal.cpp
neo/sys/sdl/: sdl_cpu.cpp  sdl_events.cpp  sdl_glimp.cpp
neo/sys/win32/: win_cpu.cpp  win_glimp.cpp  win_input.cpp  win_local.h  win_main.cpp  win_shared.cpp
neo/tools/: CMakeLists.txt
neo/tools/compilers/aas/: AASBuild.cpp  AASBuild_local.h  AASReach.cpp  AASReach.h  BrushBSP.cpp  BrushBSP.h
neo/tools/compilers/dmap/: dmap.cpp  dmap.h  map.cpp  optimize.cpp  output.cpp  portals.cpp  shadowopt3.cpp  tritjunction.cpp  tritools.cpp  usurface.cpp
neo/tools/compilers/dmap/idLibDmap/: DmapSimd_Generic.cpp
neo/tools/compilers/dmap/renderer/: DmapModel.cpp  DmapRenderSystem.cpp  DmapRenderSystem_init.cpp  DmapRenderWorld_portals.cpp  DmapVertexCache.cpp  Dmap_tr_local.h
neo/tools/compilers/renderbump/: renderbump.cpp
neo/tools/debugger/: debugger.cpp
neo/tools/guied/: GESelectionMgr.cpp  GEViewer.cpp  GEWorkspace.cpp
neo/tools/materialeditor/: MaterialPreviewView.cpp
neo/tools/radiant/: CamWnd.cpp  EditorBrush.cpp  GLWidget.cpp  NewTexWnd.cpp  PMESH.CPP  PointFile.cpp  QE3.CPP  Radiant.cpp  WIN_DLG.CPP  WIN_QE3.CPP  XYWnd.cpp  Z.CPP  ZClip.cpp  splines.cpp
